--- a/blog/_posts/2024-01-10-tontines.md
+++ b/blog/_posts/2024-01-10-tontines.md
@@ -41,4 +41,6 @@ Las tontines, mediante su estructura de ahorro rotativo, han demostrado ser efic
 
 En el link del proyecto, encontrará información detallada, textos académicos, un formato para el estudio de mercado y análisis regulatorio, junto con documentación de la Ley Fintech mexicana, todo enfocado en la introducción de las tontines en México. Les animamos a considerar los beneficios de este proyecto y a embarcarse en este viaje hacia un futuro financiero más inclusivo y colaborativo.
 
-[Descarga el proyecto de La Tontine Piloto](https://www.dropbox.com/scl/fi/xgba3sqitcn92zz4vyiaj/Tontines-Africanos.zip?rlkey=ixod0y91q0jtj2elrdjg9ql86&dl=0)
+[Descarga el proyecto COMPLETO de La Tontine Piloto](https://www.dropbox.com/scl/fi/xgba3sqitcn92zz4vyiaj/Tontines-Africanos.zip?rlkey=ixod0y91q0jtj2elrdjg9ql86&dl=0)
+
+<object data="../estudio_de_mercado.pdf" width="100%" height="600" type='application/pdf'></object>
