--- a/blog/_posts/2024-01-10-tontines.md
+++ b/blog/_posts/2024-01-10-tontines.md
@@ -33,7 +33,7 @@ Aunque la tontine no forma parte de los programas escolares convencionales, se p
 
 Este enfoque educativo basado en la tontine podría formar a ciudadanos que comprendan la importancia de desarrollar su comunidad a través de proyectos conjuntos. Al permitir que los más ricos ayuden a los más pobres, las tontinas no solo son una práctica financiera, sino también un medio para consolidar relaciones humanas y poner a las personas en el centro del desarrollo comunitario.# La Tontina Inmobiliaria: Colaboración para Adquirir Propiedades en Canadá.
 
-Eres una Fintech interesada en explorar nuevos productos financieros, descubre cómo las tontines, una práctica financiera tradicionalmente africana, podrían transformar el panorama financiero en México! Te invitamos a explorar nuestro proyecto, que incluye textos académicos, formato un estudio de mercado detallado a seguir, un análisis regulatorio con documentación de la Ley Fintech mexicana y otros anexos relevantes. Este material proporciona una visión integral de cómo las tontines pueden introducirse de manera efectiva en el mercado mexicano, brindando una alternativa única y colaborativa en el ámbito financiero.
+Eres una Fintech interesada en explorar nuevos productos financieros, descubre cómo las tontines, una práctica financiera tradicionalmente africana, podrían transformar el panorama financiero en México! Te invitamos a explorar nuestro proyecto, que incluye textos académicos, formato de un estudio de mercado detallado a seguir, un análisis regulatorio con documentación de la Ley Fintech mexicana y otros anexos relevantes. Este material proporciona una visión integral de cómo las tontines pueden introducirse de manera efectiva en el mercado mexicano, brindando una alternativa única y colaborativa en el ámbito financiero.
 
 Me complace traer una esquela de proyecto innovador que podría cambiar el panorama financiero y brindar nuevas oportunidades de inclusión. Estamos explorando la introducción de las tontines, una práctica financiera arraigada en la tradición africana, en el mercado mexicano. Este proyecto no solo promete una alternativa colaborativa única, sino que también destaca el potencial de inclusión de la población femenina en el sector financiero.
 
@@ -41,6 +41,6 @@ Las tontines, mediante su estructura de ahorro rotativo, han demostrado ser efic
 
 En el link del proyecto, encontrará información detallada, textos académicos, un formato para el estudio de mercado y análisis regulatorio, junto con documentación de la Ley Fintech mexicana, todo enfocado en la introducción de las tontines en México. Les animamos a considerar los beneficios de este proyecto y a embarcarse en este viaje hacia un futuro financiero más inclusivo y colaborativo.
 
-[Descarga el proyecto COMPLETO de La Tontine Piloto](https://www.dropbox.com/scl/fi/xgba3sqitcn92zz4vyiaj/Tontines-Africanos.zip?rlkey=ixod0y91q0jtj2elrdjg9ql86&dl=0)
+[Descarga el proyecto COMPLETO de La Tontine Piloto](https://www.dropbox.com/scl/fi/vl8kqj05smfmtv4gkfgni/Tontines-Africanos.zip?rlkey=x5drqxmz443xa9hstnjbl2gft&dl=0)
 
 <object data="../estudio_de_mercado.pdf" width="100%" height="600" type='application/pdf'></object>
