Dropbox link sin comprimir

--- a/blog/_posts/2024-01-10-tontines.md
+++ b/blog/_posts/2024-01-10-tontines.md
@@ -41,7 +41,7 @@ Las tontines, mediante su estructura de ahorro rotativo, han demostrado ser efic
 
 En el link del proyecto, encontrará información detallada, textos académicos, un formato para el estudio de mercado y análisis regulatorio, junto con documentación de la Ley Fintech mexicana, todo enfocado en la introducción de las tontines en México. Les animamos a considerar los beneficios de este proyecto y a embarcarse en este viaje hacia un futuro financiero más inclusivo y colaborativo.
 
-[Descarga el proyecto COMPLETO de La Tontine Piloto](https://www.dropbox.com/scl/fi/vl8kqj05smfmtv4gkfgni/Tontines-Africanos.zip?rlkey=x5drqxmz443xa9hstnjbl2gft&dl=0)
+[Descarga el proyecto COMPLETO de La Tontine Piloto](https://www.dropbox.com/scl/fo/oi3a86bi4rus6okpkpj9u/h?rlkey=i8ywrr8e9fgyx14oalhwsn3qa&dl=0)
 
 
 
