--- a/blog/_posts/2024-01-10-tontines.md
+++ b/blog/_posts/2024-01-10-tontines.md
@@ -46,3 +46,5 @@ En el link del proyecto, encontrará información detallada, textos académicos,
 
 
 <object data="../como_crear_una_tontine.pdf" width="100%" height="600" type='application/pdf'></object>
+
+<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="nain.taleb" data-color="#FFDD00" data-emoji=""  data-font="Lato" data-text="Donativo" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
