--- a/blog/_posts/2024-01-10-tontines.md
+++ b/blog/_posts/2024-01-10-tontines.md
@@ -43,22 +43,6 @@ En el link del proyecto, encontrará información detallada, textos académicos,
 
 [Descarga el proyecto COMPLETO de La Tontine Piloto](https://www.dropbox.com/scl/fo/a95xjt65xehivtdw65m8d/h?rlkey=nnw513rthgm2eqanbc52k7m9r&dl=0)
 
-[Apoya éste proyecto con un DONATIVO]({{ "https://www.buymeacoffee.com/nain.taleb" | relative_url }}){: .boton-buy-me-a-coffee }
+[Haz una donación a TecnoCosmo](https://www.buymeacoffee.com/nain.taleb){: .boton-buy-me-a-coffee }
 
 <object data="../como_crear_una_tontine.pdf" width="100%" height="600" type='application/pdf'></object>
-
-<style>
-.boton-buy-me-a-coffee {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #54a4b7;
-  color: #FFFFFF;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.boton-buy-me-a-coffee:hover {
-  background-color: #4a90a0;
-}
-</style>
