--- a/blog/_posts/2024-01-10-tontines.md
+++ b/blog/_posts/2024-01-10-tontines.md
@@ -46,3 +46,5 @@ En el link del proyecto, encontrará información detallada, textos académicos,
 [Haz una donación a TecnoCosmo](https://www.buymeacoffee.com/nain.taleb){: .boton-buy-me-a-coffee }
 
 <object data="../como_crear_una_tontine.pdf" width="100%" height="600" type='application/pdf'></object>
+
+<object data="../estudio_de_mercado.pdf" width="100%" height="600" type='application/pdf'></object>
