publicación Gestión Activos Moviles con Tech GPS en Red 5G

--- a/blog/_posts/2024-01-10-tontines.md
+++ b/blog/_posts/2024-01-10-tontines.md
@@ -43,7 +43,7 @@ En el link del proyecto, encontrará información detallada, textos académicos,
 
 [Descarga el proyecto COMPLETO de La Tontine Piloto](https://www.dropbox.com/scl/fo/a95xjt65xehivtdw65m8d/h?rlkey=nnw513rthgm2eqanbc52k7m9r&dl=0)
 
-[Haz una donación a TecnoCosmo](https://www.buymeacoffee.com/nain.taleb){: .boton-buy-me-a-coffee }
+[Haz una donación a TecnoKosmo](https://www.buymeacoffee.com/nain.taleb){: .boton-buy-me-a-coffee }
 
 <object data="../como_crear_una_tontine.pdf" width="100%" height="600" type='application/pdf'></object>
 
